--- a/blog-project/package.json
+++ b/blog-project/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-quill": "^2.0.0",
         "react-router-dom": "^6.11.2",
         "vite-plugin-sass-dts": "^1.3.5"
     },
