--- a/blog-project/client/package.json
+++ b/blog-project/client/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "axios": "^1.4.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-quill": "^2.0.0",
@@ -26,5 +27,7 @@
         "eslint-plugin-react-refresh": "^0.3.4",
         "sass": "^1.62.1",
         "vite": "^4.3.2"
-    }
+    },
+    "proxy": "http://localhost:8800/api/"
+
 }
