--- a/blog-project/server/package.json
+++ b/blog-project/server/package.json
@@ -13,6 +13,7 @@
     "license": "ISC",
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "cors": "^2.8.5",
         "express": "^4.18.2",
         "mysql": "^2.18.1",
         "mysql2": "^3.3.3",
