--- a/main/package.json
+++ b/main/package.json
@@ -12,6 +12,8 @@
     "@astrojs/mdx": "^4.2.3",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.3.0",
-    "astro": "^5.6.1"
+    "@tailwindcss/vite": "^4.1.3",
+    "astro": "^5.6.1",
+    "tailwindcss": "^4.1.3"
   }
 }
