--- a/main/package.json
+++ b/main/package.json
@@ -14,6 +14,10 @@
     "@astrojs/sitemap": "^3.3.0",
     "@tailwindcss/vite": "^4.1.3",
     "astro": "^5.6.1",
+    "marked": "^15.0.8",
     "tailwindcss": "^4.1.3"
+  },
+  "devDependencies": {
+    "@types/marked": "^5.0.2"
   }
 }
